tests/baselines/reference/iteratorSpreadInArray9.errors.txt
tests/cases/conformance/es6/spread/iteratorSpreadInArray9.ts(13,17): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/spread/iteratorSpreadInArray9.ts (1 errors) ====
    class SymbolIterator {
        next() {
            return {
                value: Symbol()
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var array = [...new SymbolIterator];
                    ~~~~~~~~~~~~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.